Mahout Change Log

Release 1.0 - unreleased

  MAHOUT-1529(e): Move dense/sparse matrix test in mapBlock into spark (Anand Avati via dlyubimov)

  MAHOUT-1583: cbind() operator for Scala DRMs (dlyubimov)

  MAHOUT-1541, MAHOUT-1568, MAHOUT-1569: Created text-delimited file I/O traits and classes on spark, a MahoutDriver for a CLI and a ItemSimilairtyDriver using the CLI

  MAHOUT-1573: More explicit parallelism adjustments in math-scala DRM apis; elements of automatic parallelism management (dlyubimov)

  MAHOUT-1580: Optimize getNumNonZeroElements() (ssc)
  
  MAHOUT-1464: Cooccurrence Analysis on Spark (pat)

  MAHOUT-1578: Optimizations in matrix serialization (ssc)

  MAHOUT-1572: blockify() to detect (naively) the data sparsity in the loaded data (dlyubimov)

  MAHOUT-1571: Functional Views are not serialized as dense/sparse correctly (dlyubimov)

  MAHOUT-1566: (Experimental) Regular ALS factorizer with conversion tests, optimizer enhancements and bug fixes (dlyubimov)

  MAHOUT-1537: Minor fixes to spark-shell (Anand Avati via dlyubimov)

  MAHOUT-1529: Finalize abstraction of distributed logical plans from backend operations (dlyubimov)

  MAHOUT-1489: Interactive Scala & Spark Bindings Shell & Script processor (dlyubimov)

  MAHOUT-1346: Spark Bindings (DRM) (dlyubimov)

  MAHOUT-1555: Exception thrown when a test example has the label not present in training examples (Karol Grzegorczyk via smarthi)

  MAHOUT-1446: Create an intro for matrix factorization (Jian Wang via ssc)

  MAHOUT-1480: Clean up website on 20 newsgroups (Andrew Palumbo via ssc)
  
  MAHOUT-1561: cluster-syntheticcontrol.sh not running locally with MAHOUT_LOCAL=true (Andrew Palumbo via ssc)

  MAHOUT-1558: Clean up classify-wiki.sh and add in a binary classification problem (Andrew Palumbo via ssc)

  MAHOUT-1560: Last batch is not filled correctly in MultithreadedBatchItemSimilarities (Jarosław Bojar)
